web/less/base.less
/* ... */
#project-slider
{
    overflow: hidden;
    width: 60em;
    height: 21.875em;
    margin: 1.562em 0;
    position: relative;
    
    #projects
    {
        padding: 0;
        margin: 0;
        position: absolute;
        white-space: nowrap;
        
        .project
        {
            margin: 0;
            padding: 0 0.625em;
            white-space: normal;
        }
    }
}

#gallery-slideshow
{
    .gallery-lightbox
    {
        display: none;
    }
}

#slideshow-container
{
    //background-color: #3c3c3c;
    background: url('/img/slideshow.jpg') repeat;
    border-bottom: 0.5em solid #212121;
    
    #slideshow
    {
        width: 60em;
        height: 22.5em;
        margin: auto;
        position: relative;
        padding: 0;
        
        #image-box
        {
            position: relative;
            
            .title-wrapper
            {
                position: absolute;
                top: 0;
                left: 0;
                color: white;
                text-transform: uppercase;
                text-shadow: 0.125em 0.125em 0.125em #000;
                width: 40em;
                padding-bottom: 0.625em;
                
                background-color: rgba(0, 0, 0, 0.1);
                
                .project-title
                {
                    font-size: 4.375em;
                    font-weight: bold;
                    margin-bottom: -0.25em;
                    margin-left: 0.28em;
                    
                    a
                    {
                        color: white;
                        text-decoration: none;
                    }
                    
                    a:hover
                    {
                        text-decoration: underline;
                    }
                    
                    width: 40em;
                }
                
                .project-subtitle
                {
                    font-size: 1.25em;
                    font-weight: 600;
                    width: 40em;
                    margin-left: 1em;
                }
                
                .project-tagline
                {
                    font-size: 1.25em;
                    font-weight: 200;
                    width: 40em;
                    margin-left: 1.25em;
                }
            }
        
            #current-image, #current-image img
            {
                width: 40em;
                height: 22.5em;
                display: inline-block;
            }
        }
        
        #carousel
        {
            
            width: 20em;
            height: 22.5em;
            position: absolute;
            right: 0;
            top: 0;
            overflow: hidden;
            
            ul
            {
                padding: 0.625em 0 0 0;
                margin: 0 0 0 0.625em;
                position: absolute;
                top: 0;
            }
            
            img, li
            {
                width: 19.375em;
                height: 10.312em;
                margin: 0;
            }
            
            li
            {
                list-style-type: none;
                padding-bottom: 0.625em;
            }
        }
    }
}

#projects
{    
    padding: 1.562em 0;
    
    .project
    {
        padding: 0 0.5em;
        width: 18.75em;
        color: @greytext;
        
        margin: 1.562em 0;
        display: inline-block;
    
        img
        {
            width: 18.75em;
            height: 10.625em;
        }
        
        .title-wrapper
        {
            padding: 0.625em 0;
        }
        
        .project-title
        {
            font-size: 1.5em;
            text-transform: uppercase;
            font-weight: 600;
            color: @bluetext;
        }
        
        .project-subtitle
        {
            font-size: 1.125em;
        }
        
        .project-intro
        {
            font-size: 0.875em;
            height: 5.875em;
            overflow: hidden;
        }
    }
}

#project-content
{
    width: 38.75em;
    float: left;
    margin: 1.25em 0 6.25em 0;
    
    p:first-child
    {
       margin-top: 0; 
    }
}

#project-subcontent
{
    width: 18.75em;
    float: right;
    margin: 1.25em 0 6.25em 0;
    
    p
    {
        margin: 0;
        padding: 0;
    }
    
    td:first-child
    {
        color: #878787;
        font-weight: 200;
        width: 50%;
    }
    
    td:last-child
    {
        color: #4d4d4d;
        font-weight: 600;
        width: 50%;
    }
    
    td
    {        
        font-size: 1.125em;
        vertical-align: top;
        padding-bottom: 1.875em;
    }
}

.gallery
{
    padding: 0.75em;
    margin: 0.625em 0;
    border: 0.062em solid black;
    
    .gallery-image
    {
        display: inline-block;
        padding: 0.625em;
        position: relative;
    
        img
        {
            border: 0.125em solid black;
            margin: 0;
            padding: 0;
        }
        
        img.cover
        {
            border: 0.125em solid red;
            margin: 0;
            padding: 0;
        }
        
        .image-controls
        {
            position: absolute;
            bottom: 1.25em;
            right: 1.25em;
            display: none;
            z-index: 10;
        }
    }
}

.content-wrapper .thumbnail
{
    img 
    {
        border: 0.125em solid black;
    }
    
    img.cover
    {
        border: 0.125em solid red;
    }
}

.cover-compare
{
    .thumbnail
    {
        display: inline-block;
        padding-right: 1.25em;
    }
}

.galleries-wrapper
{
    margin: 1.25em 0;
}

#demoreel, #contactme
{
    margin: 1.25em 0;
}

.content-wrapper h1
{
    text-transform: uppercase;
    color: @bluetext;
    font-size: 2.5em;
}

